@@ -33,6 +33,7 @@
      Afer sshd receives a SIGHUP, ignore subsequent HUPs while sshd re-execs
      itself.  Prevents two HUPs in quick succession from resulting in sshd
      dying.  bz#1692, patch from Colin Watson via Ubuntu.
+ - (dtucker) [defines.h] Remove now-undeeded PRIu64 define.
 
 20091208
  - (dtucker) OpenBSD CVS Sync
